@@ -20,6 +20,7 @@ exclude_match = cpanfile*
 [ShareDir]
 [MakeMaker]
 [Manifest]
+[CheckSelfDependency]
 [TestRelease]
 [ConfirmRelease]
 [Signature]
@@ -31,9 +32,16 @@ exclude_match = cpanfile*
 remove = Type::Library
 remove = Type::Utils
 
-[Prereqs]
+[Prereqs / BuildRequires ]
+-phase = build
+-relationship = requires
+ExtUtils::MakeMaker = 7.22
+Module::Metadata = 1.000015
+
+[Prereqs / DevelopRequires ]
 -phase = develop
 -relationship = requires
+Test::CVE = 0.08
 Test::Vars = 0.015
 
 [EnsurePrereqsInstalled]
