@@ -1,0 +1,20 @@
+#!perl
+
+use v5.14;
+use warnings;
+
+BEGIN {
+  unless ($ENV{AUTHOR_TESTING}) {
+    print qq{1..0 # SKIP these tests are for testing by the author\n};
+    exit
+  }
+}
+
+use Test2::V0;
+
+eval "use Test::CPAN::Changes";
+
+plan skip_all => "Test::CPAN::Changes not installed" if $@;
+
+use Net::Statsd::Lite;
+changes_ok( { version => Net::Statsd::Lite->VERSION } );
