@@ -4,6 +4,9 @@ Revision history for Net-Statsd-Lite
   [Documentation]
   - Added a security policy.
 
+  [Tests]
+  - Added more author tests.
+
 v0.8.0    2024-07-13 13:12:43+01:00 Europe/London
   [Enhancements]
   - Code was adapted to use newer syntax features.
